# ordinalsarchive

./: .env  .gitignore  .pre-commit-config.yaml  README.md  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  webpack.config.js
ordinalsarchive/: asgi.py  settings.py  urls.py  wsgi.py
ordinalsarchive/static/css/: main.css
ordinalsarchive/static/js/: main.js
pages/: admin.py  models.py  utils.py  views.py
pages/management/commands/: index.py  normalize.py  sync.py
pages/migrations/: 0001_initial.py  0002_alter_content_mime_type_and_more.py  0002_alter_txin_scriptsig_text.py  0002_content.py  0002_rename_context_block_context_revision_and_more.py  0003_alter_content_block_alter_content_op_return.py  0003_alter_inscription_number.py  0003_content_block_time_content_text.py  0004_alter_content_block_time_alter_content_text.py  0005_content_search_vector_and_more.py  0006_content_block_height_content_is_brc20_and_more.py  0007_content_content_bh_mime_idx_and_more.py
pages/templates/: base.html  block.html  content.html  context.html  tx.html
pages/templates/components/: block_range_slider.html  content_types.html  context_editor.html  results.html
src/components/: BlockRangeSlider.jsx
