[project]
name = "ordinalsarchive"
version = "0.1.0"
description = ""
authors = [
    {name = "Jason Traub",email = "jtraub91@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "django (>=5.2,<6.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "bits @ git+https://github.com/jtraub91/bits.git@dev",
    "requests (>=2.32.3,<3.0.0)",
    "psycopg (>=3.2.6,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "daphne (>=4.1.2,<5.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "gl-client (>=0.3.0,<0.4.0)",
    "qrcode[pil] (>=8.1,<9.0)",
    "boto3 (<1.36.0)",
    "botocore (==1.29.0)",
    "cbor2 (>=5.6.5,<6.0.0)",
    "psycopg-binary (>=3.2.7,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
pre-commit = "^4.2.0"
ipdb = "^0.13.13"
pylint = "^3.3.6"
pylint-django = "^2.6.1"

